# agentic-ai-digest

./: .gitignore  AGENTIC_WORKFLOW.md  README.md  aggregator.py  config.ci.json  config.example.json  emailer.py  pyproject.toml  requirements.txt  run_digest.ps1  sources.py  summarizer.py
.cursor/rules/: update-agentic-workflow-on-commit.mdc
.github/workflows/: digest.yml
docs/: GITHUB_ACTIONS_CONTEXT.md
