[project]
name = "agentic-emailer"
version = "0.1.0"
description = "Local AI news aggregator that summarizes updates with Gemini and emails a digest."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=7.0.0",
    "feedparser>=6.0.0",
    "google-genai>=1.0.0",
    "markdown>=3.7",
    "python-dateutil>=2.9.0",
]

[project.scripts]
agentic-emailer = "aggregator:main"

[tool.uv]
package = false
